# jobs-china

./: .env.example  .gitignore  README.md  build_site_data.py  parse_occupations.py  parse_small_categories.py  pyproject.toml  score.py  score_small_categories.py
site/: data.json  index.html
